# fastapi-project

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
backend/: .env.template  gunicorn_app.py  main.py  run  run_gunicorn
backend/alembic/: env.py
backend/alembic/versions/: 2025_03_13_1643-83b4aa50c6af_initial_migration.py  2025_03_14_1325-34741b91d63b_create_user.py  2025_03_14_1717-3234c7e2fbf5_create_relation_file_user.py
backend/app/: config.py
backend/app/authentication/: auth_router.py  dependencies.py  manager.py  models.py  transport.py  user_manager.py
backend/app/db/: __init__.py  base.py  db_helper.py
backend/app/files/: models.py  schemas.py
backend/app/gpt/: schemas.py  services.py
backend/app/gunicorn/: logger.py
backend/app/mixins/: __init__.py  id_uuid_pk.py
backend/app/movies/: models.py  schemas.py
backend/app/services/: __init__.py  (+1 more)
backend/commands/: __init__.py  create_superuser.py
backend/router/: router.py  router_v1.py
backend/routers/: router.py  router_v1.py
fastapi-application/: .env  .env.template  alembic.ini  gunicorn_app.py  main.py  run_with_gunicorn.py
fastapi-application/admin_panel/: __init__.py  authentication.py  bunny.py  movies.py  users.py
fastapi-application/alembic/: env.py
fastapi-application/api/: __init__.py
fastapi-application/commands/: create_superuser.py
fastapi-application/core/: config.py
fastapi-application/crud/: users.py
fastapi-application/router/: __init__.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.jsx  main.css  main.jsx
(+90 files in other folders)
